# protanki-protocol-rs

./: .gitignore  Cargo.toml  LICENSE  build.rs  proxy_socks_auth.txt  readme.md  usernames.txt  usernames.txt.generated.txt
applications/crystal-bot/: Cargo.toml
applications/crystal-bot/src/: main.rs
applications/proxy-server/: Cargo.toml
applications/proxy-server/src/: main.rs
applications/register-bot/: Cargo.toml
applications/register-bot/src/: main.rs
client-utils/: Cargo.toml
client-utils/examples/: basic-connection.rs
client-utils/src/: captcha.rs  handler.rs  lib.rs  proxy.rs  session.rs
examples/: basic-connection.rs  crystal-bot.rs  proxy-server.rs  register-bot.rs
examples/register-bot/: main.rs  proxy.rs
examples/utils/: captcha.rs  mod.rs  proxy.rs
protocol/: Cargo.toml  build.rs
protocol/examples/: basic-connection.rs
protocol/resources/: codec_mapping.json  packets.yml
protocol/src/: connection.rs  error.rs  lib.rs  resources.rs  session.rs  socket.rs
protocol/src/codec/: basics.rs  custom.rs  enums.rs  mod.rs  primitives.rs  structs.rs
protocol/src/crypto/: mod.rs  plain.rs  xor.rs
protocol/src/packets/: generated.rs  handler.rs  mod.rs  registry.rs  unknown.rs
resources/: codec_mapping.json  pt_packet_schema.json
server/: Cargo.toml
server/migrations/: 01_setup.sql
server/resources/: maps.json
server/resources/registry/: auth.json  connect.json  lobby.json
server/src/: battle.rs  battles.rs  chat.rs  client.rs  main.rs  rank.rs  resources.rs  server.rs  tasks.rs  users.rs
server/src/client_components/: authenticate.rs  battles.rs  captcha.rs  mod.rs  ping.rs  register.rs  resources.rs  settings.rs
src/: client.rs  connection.rs  crypto.rs  lib.rs  packet_handler.rs  packets.rs
src/codec/: custom.rs  mod.rs  primitives.rs
utils/: Cargo.toml
utils/src/: captcha.rs  lib.rs
