[package]
name = "tank-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
console-subscriber = "0.1.8"
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["net", "rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
convert_case = "0.6.0"
