[package]
name = "fost-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bitflags = "2.3.1"
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
fast-socks5 = "0.8.2"
futures = "0.3.28"
lazy_static = "1.4.0"
nalgebra = "0.32.2"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["net", "rt", "macros", "rt-multi-thread", "sync", "signal"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
fost-protocol = { path = "../protocol" }